--- a/config.toml
+++ b/config.toml
@@ -254,10 +254,17 @@ theme = "hugo-creative-theme"
       [params.conference.talks.talk09]
         title = "Native Go Development on GCP with the Context Package"
         class = "timeline-sub-header"
-        profile = "gopher_merlion.png"
-        name = "Ian Lewis and Shilin Wu"
-        fragmentid = "ian-lewis-and-shilin-wu"
+        # profile = "gopher_merlion.png"
+        # name = "Ian Lewis and Shilin Wu"
+        fragmentid = "ian-lewis-and-Shilin-wu"
         talk = "Ian and Shilin will tag team in this presentation. The talk will demonstrate(via Kubernetes) how well golang is supported in Cloud Platforms from development, API integration to deployment and operations. In addition, a deep dive into Golang context package and best practices in high concurrency programming will also be covered."
+        [params.conference.talks.talk09.speakers]
+          [params.conference.talks.talk09.speakers.ian]
+            profile = "gopher_merlion.png"
+            name = "Ian Lewis and Shilin Wu"
+          [params.conference.talks.talk09.speakers.shilin]
+            profile = "gopher_merlion.png"
+            name = "Shilin Wu"
 
       [params.conference.talks.talk10]
         title = "$GOPHERCONSG/lunch/time"
