--- a/config.toml
+++ b/config.toml
@@ -126,7 +126,7 @@ theme = "hugo-creative-theme"
     [params.speakers.speaker_talk_e]
        profile = "ryanlaw.jpg"
        name = "Ryan Law"
-       fragmentId = "ryan-law"
+       fragmentid = "ryan-law"
        brand = ""
        caption = "Grab"
        bio = "Ryan is currently a Site Reliability Engineer at Grab. Being one of Grab’s early engineers, he has extensive knowledge of Grab’s system and he makes use of it by diving deep into different technical problems on a daily basis. Before switching over to his current role, Ryan led the web frontend and the Ruby on Rails teams at Grab."
@@ -272,7 +272,7 @@ theme = "hugo-creative-theme"
         timerange = "2.00pm"
         profile = "ryanlaw.jpg"
         name = "Ryan Law"
-        fragmentId = "ryan-law"
+        fragmentid = "ryan-law"
         talk = "In Grab, we went from monolithic services to multiple smaller services in Go and we missed the ability to have detailed transaction traces of our code. In this talk, we will show you how we are re-implementing this ability in Go, a language that does not support thread-locals."
 
       [params.conference.talks.talk12]
