--- a/config.toml
+++ b/config.toml
@@ -266,11 +266,11 @@ theme = "hugo-creative-theme"
         talk = "Ian and Shilin will tag team in this presentation. The talk will demonstrate(via Kubernetes) how well golang is supported in Cloud Platforms from development, API integration to deployment and operations. In addition, a deep dive into Golang context package and best practices in high concurrency programming will also be covered."
         [params.conference.talks.talk09.speakers]
           [params.conference.talks.talk09.speakers.ian]
-            profile = "gopher_merlion.png"
+            profile = "ian-lewis.png"
             name = "Ian Lewis"
             fragmentid = "ian-lewis"
           [params.conference.talks.talk09.speakers.shilin]
-            profile = "gopher_merlion.png"
+            profile = "shilin.jpg"
             name = "Shilin Wu"
             fragmentid = "shilin-wu"
 
