Fix Ajey's twitter link

--- a/config.toml
+++ b/config.toml
@@ -83,7 +83,7 @@ theme = "hugo-creative-theme"
        name = "Ajey Gore"
        fragmentid = "ajey-gore"
        keynote = "&dash; keynote speaker &dash;"
-       brand = "https://twitter.com/goinggodotnet"
+       brand = "https://twitter.com/AjeyGore"
        caption = "Go-Jek"
        bio = "Ajey is the Group CTO of [Go-Jek](https://www.go-jek.com/). With 17 years of experience in building core technology strategy across diverse domains, Ajey has helped several businesses through technology transformations at [ThoughtWorks](https://www.thoughtworks.com/) and [CodeIgnition](https://twitter.com/codeignition). Ajey is the founder of CodeIgnition and an active influencer in the technology community."
        title = "TBA"
