add a sold out banner

--- a/config.toml
+++ b/config.toml
@@ -41,7 +41,7 @@ theme = "hugo-creative-theme"
 	# Hero section
 	[params.hero]
 		# To change the background of the hero section, replace the 'header.jpg' at './static/img' with your own.
-		buttonText = "Get Tickets"
+		buttonText = "SOLD OUT"
 
 	# About section
 	[params.about]
