Refactored workshop map iframe to template

--- a/config.toml
+++ b/config.toml
@@ -417,6 +417,7 @@ theme = "hugo-creative-theme"
     profile = "bill.jpg"
     twitterbrand = "https://twitter.com/goinggodotnet"
     bio = "William Kennedy is a managing partner at Ardan Studio in Miami, Florida, a mobile, web, and systems development company. He is also a co-author of the book Go in Action, the author of the blog [GoingGo.Net](http://goinggo.net), and a founding member of [GoBridge](https://golangbridge.org/) which is working to increase Go adoption through diversity."
+    # mapiframeurl = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1994.408775532115!2d103.84810964573856!3d1.2833264075290443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da190c75d0dc05%3A0xa48859b016c0afdd!2sAmazon+Web+Services!5e0!3m2!1sen!2ssg!4v1486886392152"
 
   # Venue section
 	[params.venue]
