--- a/config.toml
+++ b/config.toml
@@ -410,8 +410,8 @@ theme = "hugo-creative-theme"
     timerange = "9.00am to 5.30pm"
     title = "Ultimate Go Workshop"
     date = "Thursday, 25th May"
-    venue = "Amazon Web Services, 23 Church Street, #10-01, Singapore 049481"
-    venueinfo = "Lunch is provided"
+    venue = "to be confirmed"
+    # venueinfo = "Lunch is provided"
     type = "Workshop"
     instructor = "William Kennedy"
     profile = "bill.jpg"
