--- a/config.toml
+++ b/config.toml
@@ -431,3 +431,7 @@ theme = "hugo-creative-theme"
 	# Footer section
 	[params.credits]
     description = "hello@gophercon.sg"
+
+  [[redirects]]
+    old = "/talks"
+    new = "/schedule"
